[package]
name = "fastry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features=["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
pyo3 = { version = "0.16.5", features = ["full"] }
time = "0.1"
"pythonize" = "0.16.0"
